<resources>
    <string name="app_name">MiConta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_income">Ingresos</string>
    <string name="menu_egress">Egresos</string>
    <string name="menu_payment">Pagos</string>
    <string name="menu_exchange_rate">Tipo de Cambio</string>

    <string name="btn_save">Guardar</string>
</resources>