<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/ic_baseline_add_business_24"
            android:title="@string/menu_income" />

        <item
            android:id="@+id/nav_egress"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_egress" />

        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_baseline_payments_24"
            android:title="@string/menu_payment" />

        <item
            android:id="@+id/nav_exchange_rate"
            android:icon="@drawable/ic_baseline_currency_exchange_24"
            android:title="@string/menu_exchange_rate" />
    </group>
</menu>