<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jvinteractivecr.miconta.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.jvinteractivecr.miconta.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.jvinteractivecr.miconta.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_egress"
        android:name="com.jvinteractivecr.miconta.ui.egress.EgressFragment"
        android:label="@string/menu_egress"
        tools:layout="@layout/fragment_egress" />
    <fragment
        android:id="@+id/nav_exchange_rate"
        android:name="com.jvinteractivecr.miconta.ui.exchangerate.ExchangeRateFragment"
        android:label="@string/menu_exchange_rate"
        tools:layout="@layout/fragment_exchange_rate" />
    <fragment
        android:id="@+id/nav_income"
        android:name="com.jvinteractivecr.miconta.ui.income.IncomeFragment"
        android:label="@string/menu_income"
        tools:layout="@layout/fragment_income" />
    <fragment
        android:id="@+id/nav_payment"
        android:name="com.jvinteractivecr.miconta.ui.payment.PaymentFragment"
        android:label="@string/menu_payment"
        tools:layout="@layout/fragment_payment" />
</navigation>